# MAE5032-2022-spring

./: .gitignore  README.md
final-project/: .gitignore  project.tex
hdf5-tutorial-code/ex-01-file/: h5_file.c  h5file.f90
hdf5-tutorial-code/ex-02-dataset/: h5_crtdat.c  h5_crtdat.f90
hdf5-tutorial-code/ex-03-rw/: SDS.h5  h5_rdwt.c  h5_rdwt.f90
hdf5-tutorial-code/ex-04-group/: h5_crtgrp.c  h5_crtgrp.f90
mpi-tutorial-code/ex1/: a.out  hello
mpi-tutorial-code/ex1-basics/: main.c
mpi-tutorial-code/ex2/: a.out  main.c
mpi-tutorial-code/ex3-send-recv-2/: main.c
mpi-tutorial-code/ex4-deadlock/: main.c
mpi-tutorial-code/ex5-non-blocking/: main.c
mpi-tutorial-code/ex5-pi/: parallel2.c  serial.c
mpi-tutorial-code/ex6-pi/: Makefile  parallel1.c  parallel3.c
petsc-tutorial-code/ex1/: Makefile
petsc-tutorial-code/ex1-demo/: Makefile  run_script.sh
petsc-tutorial-code/ex2/: Makefile  ex2
petsc-tutorial-code/ex2-basics/: .ex2.c.swp  Makefile  ex2  ex2.c
petsc-tutorial-code/ex3-vec-viewer/: Makefile  ex3.c  ex3.out  run_script.sh
petsc-tutorial-code/ex3-viewer/: ex3.out
petsc-tutorial-code/ex4-mat/: Makefile  ex4.c
petsc-tutorial-code/ex5-ksp/: Makefile  ex5.c  run_script.sh  ty_script
vtk-tutorial-code/: CMakeLists.txt  main.cpp
